k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - http:
        paths:
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8081
          - path: /registration
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8081
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: bookmark-service
                port:
                  number: 8080
          - path: /files
            pathType: Prefix
            backend:
              service:
                name: file-service
                port:
                  number: 8082
